<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size_large"
            tools:text="Person name" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            android:hint="@string/hint_account_number">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/from_account_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                tools:text="123-456-789" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:hint="@string/hint_amount">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:text="100.00" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/disclaimer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/button_view_disclaimer" />

    </LinearLayout>
</layout>